@@ -1,11 +1,15 @@
+2006-07-09  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* textmodes/fill.el (fill-region-as-paragraph): Refine last change.
+
 2006-07-08  Richard Stallman  <rms@gnu.org>
 
 	* term/x-win.el (x-handle-display): Add doc string.
 
 	* emacs-lisp/easy-mmode.el (define-minor-mode): Doc fix.
 
-	* subr.el (def-edebug-spec): Moved here.
-	* emacs-lisp/edebug.el (def-edebug-spec): Moved to subr.el.
+	* subr.el (def-edebug-spec): Move here.
+	* emacs-lisp/edebug.el (def-edebug-spec): Move to subr.el.
 
 	* imenu.el (imenu-choose-buffer-index): Doc fix.
 
